# rustyban

./: .gitignore  AGENTS.md  Cargo.toml  IMPROVEMENTS.md  README.md
.cursor/commands/: improvement.md
res/: roadmap.json  test_board.json  test_board_with_empty_column.json
src/: app.rs  board.rs  domain.rs  error.rs  event_handler.rs  lib.rs  main.rs  render.rs  time.rs
src/app/: app.rs  app_runner.rs  app_state.rs  card_editor.rs  card_selector.rs  event_handler.rs  help.rs  logger.rs  save_to_file.rs  text_widget.rs  widget_utils.rs
src/app/event_handler/: edit.rs  normal.rs  save.rs
src/board/: board.rs  card.rs  column.rs
src/core/: board.rs  card.rs  column.rs  error.rs  mod.rs
src/domain/: command.rs  command_history.rs  constants.rs  event_handlers.rs  mod.rs  services.rs  types.rs  utils.rs
src/domain/commands/: change_priority.rs  command_helpers.rs  insert_card.rs  mark_card.rs  mod.rs  move_card.rs  remove_card.rs  update_card.rs
src/engine/: app.rs  app_builder.rs  app_constructors.rs  app_operations.rs  app_state.rs  app_widget.rs  card_selector.rs  concrete_logger.rs  file_service.rs  logger.rs  mock_card_selector.rs  mock_file_service.rs  mock_logger.rs  mod.rs  save_to_file.rs
src/ui/: app_runner.rs  card_editor.rs  help.rs  mod.rs  text_widget.rs  widget_utils.rs
src/ui/event_handlers/: edit.rs  mod.rs  normal.rs  save.rs
src/utils/: time.rs
