[package]
name = "rustyban"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2"
tui-textarea = "0.6.1"
